--- a/style.css
+++ b/style.css
@@ -1,5 +1,16 @@
 
 
-p{
-    font-size: 4vh;
+h6{
+    text-decoration: underline;
+    text-align: center;
+    font-size: 3.75vh;
+    margin: 0.5vh;
+    
 }
+
+p{
+    font-size: 3.75vh;
+    text-align: center;
+    text-decoration:none
+}
+
