--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
 
 
+body{
+    background-color: black;
+}
 h6{
-    text-decoration: underline;
+    text-decoration: none;
     text-align: center;
     font-size: 3.75vh;
     margin: 4vh;
+    color: rgb(226, 149, 6)
     
 }
 
@@ -13,5 +17,6 @@ p{
     text-align: center;
     text-decoration:none;
     margin: 4vh;
+    color: #e6b594;
 }
 
